# stock-quotes

./: .gitignore  .htlint.yaml  CHANGELOG.md  cabal.project.local  fourmolu.yaml  stock-quotes.cabal
app/: Main.hs
src/: Charts.hs  HtmlReport.hs  Params.hs  QuoteData.hs  StatReport.hs
