cabal-version:   3.0
name:            stock-quotes
version:         0.1.0.0
author:          Philg112
category:        Data
build-type:      Simple

-- Extra doc files to be distributed with the package, such as a CHANGELOG or a README.
extra-doc-files: CHANGELOG.md

common warnings
  ghc-options: -Wall

library
  import:           warnings
  exposed-modules:
    Charts
    HtmlReport
    MyLib
    Params
    QuoteData
    StatReport

  build-depends:
    , base                  ^>=4.16.4.0
    , blaze-colonnade       >=1.2.2     && <1.3
    , blaze-html            >=0.9.1     && <0.10
    , bytestring            >=0.11.4    && <0.12
    , cassava               >=0.5.3     && <0.6
    , Chart                 >=1.9.4     && <1.10
    , Chart-diagrams        >=1.9.4     && <1.10
    , colonnade             >=1.2.0     && <1.3
    , fmt                   >=0.6.3     && <0.7
    , optparse-applicative  >=0.18.1    && <0.19
    , text                  >=1.2.5     && <1.3
    , time                  >=1.11.1    && <1.12

  hs-source-dirs:   src
  default-language: Haskell2010

executable stock-quotes
  import:           warnings
  main-is:          Main.hs
  build-depends:
    , base          ^>=4.16.4.0
    , bytestring
    , cassava       >=0.5.3     && <0.6
    , stock-quotes
    , text

  hs-source-dirs:   app
  default-language: Haskell2010

test-suite stock-quotes-test
  import:             warnings
  default-language:   Haskell2010
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  main-is:            Spec.hs
  build-depends:
    , base            ^>=4.16.4.0
    , hspec
    , hspec-discover
    , stock-quotes

  build-tool-depends: hspec-discover:hspec-discover
